--- a/style.css
+++ b/style.css
@@ -32,12 +32,20 @@ body{
 }
 
 .grid {
-    display: grid;
+    display: flex;
     gap: 15px;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 
 .grid div{
     padding: 20px;
     border-radius: 40px;
-    background-color:burlywood; 
+    background-color:burlywood;
+    width: 450px; 
+}
+
+
+@media (max-width: 768px){
+    body{background-color: mediumslateblue;}
 }
